# kumon-agent

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: __init__.py  config.py
app/agents/: __init__.py  agent_graph.py  llm_client.py  prompt_registry.py  state.py  tools.py  traces.py
app/api/: __init__.py
app/cli/: __init__.py  main.py
app/domain/: __init__.py  knowledge_base.py  math_engine.py  models.py  ocr_mapping.py
app/observability/: __init__.py  service.py
app/persistence/: __init__.py  database.py
app/prompts/: __init__.py
app/services/: __init__.py  ingestion_service.py  ocr_review_service.py  progress_summary_service.py  progression_service.py  scoring_service.py  submission_service.py  tutor_planning_service.py  worksheet_generator.py  worksheet_review_service.py
app/templates/: answer_key.html.j2  progress_summary.html.j2  worksheet.html.j2
app/tests/: __init__.py  conftest.py  test_agent_graph.py  test_agent_graph_fallback.py  test_agent_state.py  test_agent_tools.py  test_agent_traces.py  test_cli_pending.py  test_cli_progress.py  test_cli_submit.py  test_database.py  test_greek_quality.py  test_ingestion_service.py  test_llm_client.py  test_math_engine.py  test_observability_agent_integration.py  test_observability_service.py  test_ocr_review_service.py  test_prompt_registry.py  (+6 more)
(+83 files in other folders)
