[project]
name = "kumon-agent"
version = "0.1.0"
description = "Kumon-style math practice agent for a 10-year-old child in Greece"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "typer>=0.13.0",
    "jinja2>=3.1.4",
    "pydantic>=2.9.0",
    "rich>=13.9.0",
    "openai>=1.50.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "pillow>=10.4.0",
    "pytesseract>=0.3.10",
    "python-magic>=0.4.27",
    "pypdfium2>=4.30.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
kumon = "app.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]
